fix hos click accordion filters + search on mobile

--- a/house-of-science/ui.frontend/src/main/webpack/components/_search.scss
+++ b/house-of-science/ui.frontend/src/main/webpack/components/_search.scss
@@ -38,13 +38,23 @@
             background-color: $white;
             color: $primary-color-three;
             font-family: $font-family;
-            font-size: 23px;
+            font-size: 20px;
             font-weight: $bold;
             display: flex;
+            justify-content: center;
             align-items: center;
             &:hover{
                 transform: scale(1.02);
             }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .search_container{
+        .cmp-search{
+            &__searchInput{}
+            &__button{width: 25%;}
         }
     }
 }
