--- a/house-of-science/ui.frontend/src/main/webpack/components/_searchFilter.scss
+++ b/house-of-science/ui.frontend/src/main/webpack/components/_searchFilter.scss
@@ -44,7 +44,8 @@
                         font-family: $font-family;
                         font-weight: $bold;
                         font-size: 16px;
-                        cursor: pointer;                        
+                        cursor: pointer;
+                        position: relative;
                     }
                 }
             }
